--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <input type="text" class="input" />
         <input type="submit" class="add" value="Add Task" />
       </div>
-      <div class="tasks"></div>
+      <div class="tasks">
+          
+      </div>
     </div>
-    <script src="main.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
